--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,7 +43,7 @@ services:
       - container.env
 
   elasticsearch:
-    image: docker.elastic.co/elasticsearch/elasticsearch:8.12.0
+    image: elasticsearch:8.12.0
     container_name: elasticsearch
     restart: always
     environment:
@@ -73,7 +73,7 @@ services:
       - container.env
 
   kibana:
-    image: docker.elastic.co/kibana/kibana:8.12.0
+    image: kibana:8.12.0
     container_name: kibana
     restart: always
     environment:
