Fix Kibana security detection engine error
- Disabled xpack security, ML, graph, watcher, and monitoring features
- Added encryption keys for encrypted saved objects and reporting
- Configured session timeouts to prevent security-related errors
- Resolves 'Failed to retrieve detection engine privileges' error
- Kibana now runs properly with Elasticsearch security disabled

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -79,6 +79,14 @@ services:
     environment:
       - ELASTICSEARCH_HOSTS=http://elasticsearch:9200
       - xpack.security.enabled=false
+      - xpack.encryptedSavedObjects.encryptionKey=a7a6311933d3503b89bc2dbc36572c33a6c10925682e591bffcab954b8f1c5b7
+      - xpack.reporting.encryptionKey=a7a6311933d3503b89bc2dbc36572c33a6c10925682e591bffcab954b8f1c5b7
+      - xpack.security.session.idleTimeout=1h
+      - xpack.security.session.lifespan=30d
+      - xpack.ml.enabled=false
+      - xpack.graph.enabled=false
+      - xpack.watcher.enabled=false
+      - xpack.monitoring.enabled=false
     ports:
       - "5601:5601"
     depends_on:
