feat: migrate transcription services to internal Docker network
- Add transcription services (vllm-api, operaasr-general, opera-tipax) to main docker-compose.yml
- Configure internal Docker networking for all services using app-network
- Update transcription API calls to use internal hostnames (opera-tipax:8003)
- Add configurable TRANSCRIPTION_API_URL environment variable
- Create server migration and deployment scripts
- Add comprehensive server deployment guide
- Improve performance and security by eliminating external API calls between services

Changes:
- docker-compose.yml: Added transcription services with GPU support and networking
- container.env: Added TRANSCRIPTION_API_URL configuration
- envConfig.ts: Added TRANSCRIPTION_API_URL validation
- sessionUtils.ts: Updated API calls to use configurable internal URLs
- Added migration scripts and documentation for server deployment

--- a/container.env
+++ b/container.env
@@ -35,6 +35,9 @@ MINIO_ENDPOINT_UTL=http://minio:9000
 MINIO_ACCESS_KEY=minioaccesskey
 MINIO_SECRET_KEY=miniosecretkey
 
+# Transcription API (docker-compose service)
+TRANSCRIPTION_API_URL=http://opera-tipax:8003
+
 POSTGRES_DB=opera_qc
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=StrongP@ssw0rd123
