Add Redis jobs inspection script
- Add show-redis-jobs.js script to inspect BullMQ queues
- Shows waiting, active, completed, failed, and delayed jobs
- Displays Redis connection info and queue statistics
- Add npm script for easy execution

--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "migrate-verify": "tsx scripts/migrate-to-elasticsearch.ts --verify",
     "migrate-sample": "tsx scripts/migrate-to-elasticsearch.ts --sample",
     "cleanup-audio": "node cleanup-old-audio-files.js",
-    "cleanup-audio-dry": "node cleanup-old-audio-files.js --dry-run"
+    "cleanup-audio-dry": "node cleanup-old-audio-files.js --dry-run",
+    "show-redis-jobs": "node show-redis-jobs.js"
   },
   "dependencies": {
     "@asteasolutions/zod-to-openapi": "^7.0.0",
