make the redis show jobs from js to shell

--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "migrate-sample": "tsx scripts/migrate-to-elasticsearch.ts --sample",
     "cleanup-audio": "node cleanup-old-audio-files.js",
     "cleanup-audio-dry": "node cleanup-old-audio-files.js --dry-run",
-    "show-redis-jobs": "node show-redis-jobs.js"
+    "show-redis-jobs": "./show-redis-jobs.sh"
   },
   "dependencies": {
     "@asteasolutions/zod-to-openapi": "^7.0.0",
